[gd_scene load_steps=16 format=3 uid="uid://igr5taqly5ch"]

[ext_resource type="Script" uid="uid://busak7hd601ln" path="res://scripts/observatory_selection/telescope_select.gd" id="1_ge3vk"]
[ext_resource type="Script" uid="uid://b70rxpxqa6sko" path="res://scripts/observatory_selection/telescope.gd" id="1_rpyu1"]
[ext_resource type="Script" uid="uid://of4mt0dqm8sw" path="res://scripts/observatory_selection/telescope_grid.gd" id="3_8h3wp"]
[ext_resource type="PackedScene" uid="uid://cdp8ukqiyccgm" path="res://scenes/observatory_selection/selected_telescope_display.tscn" id="4_jm8ys"]
[ext_resource type="PackedScene" uid="uid://bug6q8xv6do8y" path="res://scenes/observatory_selection/telescope_slot.tscn" id="4_v0ka8"]
[ext_resource type="Resource" uid="uid://d3hhvy6lacsap" path="res://resources/observatories/Hubble.tres" id="5_v0ka8"]
[ext_resource type="Resource" uid="uid://bauqjtnne5db8" path="res://resources/observatories/JWST.tres" id="6_swsw3"]
[ext_resource type="Shader" uid="uid://ba6xcygwib32b" path="res://shaders/transparent_circle.gdshader" id="6_uaqny"]
[ext_resource type="Resource" uid="uid://hwwqgt24pvrb" path="res://resources/observatories/Rubin.tres" id="7_8xw5q"]
[ext_resource type="Resource" uid="uid://cnm42vreubj54" path="res://resources/observatories/ZFT.tres" id="8_w8lk5"]
[ext_resource type="Resource" uid="uid://dgtwp45fxqhdi" path="res://resources/players/Player1.tres" id="10_bkch5"]
[ext_resource type="Resource" uid="uid://cp774eauo6qyo" path="res://resources/players/Player2.tres" id="11_5rwk1"]
[ext_resource type="Resource" uid="uid://nxdid1t8m7go" path="res://resources/players/Player3.tres" id="12_x22ne"]
[ext_resource type="Resource" uid="uid://c6jxup0s2ou4r" path="res://resources/players/Player4.tres" id="13_8lx24"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_8h3wp"]
shader = ExtResource("6_uaqny")
shader_parameter/resolution = Vector2(1920, 1080)

[node name="TelescopeSelect" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ge3vk")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.212305, 0.212305, 0.212305, 1)

[node name="TelescopeGrid" type="GridContainer" parent="."]
custom_minimum_size = Vector2(600, 600)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
columns = 4
script = ExtResource("3_8h3wp")
telescope_slot = ExtResource("4_v0ka8")
telescopes = Array[ExtResource("1_rpyu1")]([ExtResource("5_v0ka8"), ExtResource("6_swsw3"), ExtResource("7_8xw5q"), ExtResource("8_w8lk5")])

[node name="SelectedTelescopeDisplayP1" parent="." instance=ExtResource("4_jm8ys")]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -99.0
offset_top = -221.0
offset_right = 101.0
offset_bottom = -21.0
grow_horizontal = 2
grow_vertical = 0
controlling_player = ExtResource("10_bkch5")

[node name="SelectedTelescopeDisplayP2" parent="." instance=ExtResource("4_jm8ys")]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 641.0
offset_top = -99.0
offset_right = 841.0
offset_bottom = 101.0
grow_vertical = 2
rotation = 1.5708
controlling_player = ExtResource("11_5rwk1")

[node name="SelectedTelescopeDisplayP3" parent="." instance=ExtResource("4_jm8ys")]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 100.0
offset_top = 221.0
offset_right = 300.0
offset_bottom = 421.0
grow_horizontal = 2
rotation = 3.14159
controlling_player = ExtResource("12_x22ne")

[node name="SelectedTelescopeDisplayP4" parent="." instance=ExtResource("4_jm8ys")]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -641.0
offset_top = 97.0
offset_right = -441.0
offset_bottom = 297.0
grow_horizontal = 0
grow_vertical = 2
rotation = -1.5708
controlling_player = ExtResource("13_8lx24")

[node name="ColorRect2" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_8h3wp")
layout_mode = 0
offset_right = 1920.0
offset_bottom = 1080.0
color = Color(0, 0, 0, 1)

[node name="StartTimer" type="Timer" parent="."]
wait_time = 6.0
one_shot = true

[node name="StartCountdownLabel" type="Label" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
horizontal_alignment = 1

[connection signal="timeout" from="StartTimer" to="." method="_on_start_timer_timeout"]
